--- a/java/learn-jpa-and-hibernate/src/main/resources/application.properties
+++ b/java/learn-jpa-and-hibernate/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:scheme.sql
+spring.jpa.show-sql=true
